{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 129,
  "lineage": "fdbb4ffd-cbc2-b0fa-261d-6dd282a91b60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElaticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089777f90772afa6f",
            "association_id": "eipassoc-078e74c8018a578e1",
            "domain": "vpc",
            "id": "eipalloc-089777f90772afa6f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07f4b144366b08fd8",
            "private_dns": "ip-10-0-1-226.ap-south-1.compute.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-3-6-254-222.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.254.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TerraformElasticIP"
            },
            "tags_all": {
              "Name": "TerraformElasticIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:internet-gateway/igw-0bfa5579682068c97",
            "id": "igw-0bfa5579682068c97",
            "owner_id": "196565052768",
            "tags": {
              "Name": "terrsform-igw"
            },
            "tags_all": {
              "Name": "terrsform-igw"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraformNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089777f90772afa6f",
            "connectivity_type": "public",
            "id": "nat-007dc5e2bb23b319a",
            "network_interface_id": "eni-07f4b144366b08fd8",
            "private_ip": "10.0.1.226",
            "public_ip": "3.6.254.222",
            "subnet_id": "subnet-0edd085a585512594",
            "tags": {
              "Name": "Terraform NAT"
            },
            "tags_all": {
              "Name": "Terraform NAT"
            }
          },
          "dependencies": [
            "aws_eip.ElaticIP",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.publicSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-03c04dc42358200f4",
            "id": "rtb-03c04dc42358200f4",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-007dc5e2bb23b319a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private RT"
            },
            "tags_all": {
              "Name": "Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.terraformNAT",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-05b64d276f0d34cc9",
            "id": "rtb-05b64d276f0d34cc9",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfa5579682068c97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f41cc178d3bd22",
            "route_table_id": "rtb-03c04dc42358200f4",
            "subnet_id": "subnet-00a52905dd14289c5"
          },
          "dependencies": [
            "aws_nat_gateway.terraformNAT",
            "aws_route_table.PrivateRoute",
            "aws_subnet.privateSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098e995c91f04c205",
            "route_table_id": "rtb-03c04dc42358200f4",
            "subnet_id": "subnet-0be5b174076944f77"
          },
          "dependencies": [
            "aws_nat_gateway.terraformNAT",
            "aws_route_table.PrivateRoute",
            "aws_subnet.privateSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8c012b8085da602",
            "route_table_id": "rtb-03c04dc42358200f4",
            "subnet_id": "subnet-07f5ac772b34c6777"
          },
          "dependencies": [
            "aws_nat_gateway.terraformNAT",
            "aws_route_table.PrivateRoute",
            "aws_subnet.privateSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519fdf1693cb210e",
            "route_table_id": "rtb-05b64d276f0d34cc9",
            "subnet_id": "subnet-0edd085a585512594"
          },
          "dependencies": [
            "aws_subnet.publicSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.PublicRoute"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0601f2c9d51a5a594",
            "route_table_id": "rtb-05b64d276f0d34cc9",
            "subnet_id": "subnet-0d9c7dfca4b17e694"
          },
          "dependencies": [
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs",
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.PublicRoute",
            "aws_subnet.publicSubnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032508b84639cbbe9",
            "route_table_id": "rtb-05b64d276f0d34cc9",
            "subnet_id": "subnet-0fdcefa61d447e2bd"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.PublicRoute",
            "aws_subnet.publicSubnet",
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-00a52905dd14289c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00a52905dd14289c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0be5b174076944f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0be5b174076944f77",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-07f5ac772b34c6777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07f5ac772b34c6777",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "PrivateSubnet-3"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0edd085a585512594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0edd085a585512594",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0d9c7dfca4b17e694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d9c7dfca4b17e694",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "aws_vpc.DemoVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0fdcefa61d447e2bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0fdcefa61d447e2bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PublicSubnet-3"
            },
            "tags_all": {
              "Name": "PublicSubnet-3"
            },
            "vpc_id": "vpc-0ea38e8219c2b1daf"
          },
          "dependencies": [
            "aws_vpc.DemoVPC",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DemoVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:vpc/vpc-0ea38e8219c2b1daf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e78aab89d4cc21b8",
            "default_route_table_id": "rtb-01d494301e6bf8479",
            "default_security_group_id": "sg-022617b7f1ef0d0b6",
            "dhcp_options_id": "dopt-cd19aba6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ea38e8219c2b1daf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d494301e6bf8479",
            "owner_id": "196565052768",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}